Lista de nombres  de permisos y roles en la verificación de roles
